Fix spacing after dd elements

--- a/subprojects/docs/src/jbake/assets/css/docs-asciidoctor.css
+++ b/subprojects/docs/src/jbake/assets/css/docs-asciidoctor.css
@@ -344,7 +344,7 @@ ul li ol { margin-left: 1.5em; }
 
 dl dd { margin-left: 1.125em; }
 
-dl dd:last-child, dl dd:last-child > :last-child { margin-bottom: 0; }
+dl dd:last-child, dl dd:last-child > :last-child { margin-bottom: 1.25em; }
 
 ol > li p, ul > li p, ul dd, ol dd, .olist .olist, .ulist .ulist, .ulist .olist, .olist .ulist { margin-bottom: 0.625em; }
 
